--- a/html/timeline.html
+++ b/html/timeline.html
@@ -103,6 +103,16 @@
   <body>
     <div class="timeline-container">
       <div class="timeline">
+
+        <div class="timeline-item">
+          <div class="timeline-dot"></div>
+          <div class="timeline-content">
+            <div class="timeline-date">May 2025 - August 2025</div>
+            <div class="timeline-role">Data Engineer Intern</div>
+            <div class="timeline-description">3 months internship as a Data Engineer at Tesla, working on data pipeline development, ETL processes, and Query optimization.</div>
+          </div>
+        </div>
+        
         <div class="timeline-item">
           <div class="timeline-dot"></div>
           <div class="timeline-content">
