Add joinery project description

--- a/index.html
+++ b/index.html
@@ -154,69 +154,24 @@
                 <p>
                     <span class="tag"> Heads down, grinding away... </span>
                 </p>
-                <!--<div class="project-item">
-                    <h3>real-time data pipeline</h3>
+                <div class="project-item">
+                    <h3>
+                        Joinery: Lightweight, Federated Query Engine in Python
+                    </h3>
                     <p class="project-description">
-                        built end-to-end streaming data pipeline processing
-                        100k+ events per second. implements kafka for message
-                        queuing, spark structured streaming for real-time
-                        processing, and delta lake for storage. includes
-                        monitoring and alerting with datadog.
+                        Joinery is a lightweight, federated query engine that
+                        lets you query data from disparate tables like they are
+                        one. It has features for parsing, predicate-pushdown,
+                        and async querying from data sources. It also comes with
+                        a small database explorer that lets you add, remove, and
+                        edit data source, along with a minimal SQL query editor.
                     </p>
                     <p class="project-tech">
                         <span class="tag">
-                            python • kafka • spark • delta lake
+                            Python • DuckDB • Pandas • SQLAlchemy • SQLGlot
                         </span>
                     </p>
                 </div>
-
-                <div class="project-item">
-                    <h3>modern data warehouse</h3>
-                    <p class="project-description">
-                        designed and implemented cloud data warehouse on
-                        snowflake. built dbt models for data transformation,
-                        automated data quality tests, and created dimensional
-                        models for analytics. reduced query times by 70% through
-                        optimization.
-                    </p>
-                    <p class="project-tech">
-                        <span class="tag">
-                            sql • dbt • snowflake • airflow
-                        </span>
-                    </p>
-                </div>
-
-                <div class="project-item">
-                    <h3>etl orchestration framework</h3>
-                    <p class="project-description">
-                        developed scalable etl framework using apache airflow.
-                        manages 200+ dags with dynamic task generation,
-                        implements retries and alerting, handles data lineage
-                        tracking, and provides self-service data ingestion for
-                        analysts.
-                    </p>
-                    <p class="project-tech">
-                        <span class="tag">
-                            python • airflow • postgresql • docker
-                        </span>
-                    </p>
-                </div>
-
-                <div class="project-item">
-                    <h3>data quality monitoring system</h3>
-                    <p class="project-description">
-                        created automated data quality monitoring system with
-                        great expectations. validates data freshness, schema
-                        changes, and statistical anomalies. integrates with
-                        slack for alerts and maintains quality metrics
-                        dashboard.
-                    </p>
-                    <p class="project-tech">
-                        <span class="tag">
-                            python • great expectations • tableau • aws
-                        </span>
-                    </p>
-                </div>-->
             </section>
 
             <section id="blog" class="section">
