--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
                 href="#about"
                 class="nav-link active"
                 onclick="showSection('about')"
-                >about</a
+                >About</a
             >
             <a
                 href="#projects"
                 class="nav-link"
                 onclick="showSection('projects')"
-                >projects</a
+                >Projects</a
             >
             <a href="#blog" class="nav-link" onclick="showSection('blog')"
-                >blog</a
+                >Blog</a
             >
         </nav>
 
         <div class="container">
             <section id="about" class="section active">
-                <h1>hi, i'm Jayanth.</h1>
+                <h1>Hi, I'm Jayanth.</h1>
 
                 <div class="tags">
                     <span class="tag">Python</span>
@@ -45,7 +45,7 @@
                 <div class="about-text">
                     <p>
                         I'm broadly interested in developing data infrastructure
-                        that scales. passionate about designing robust etl
+                        that scales. passionate about designing robust ETL
                         pipelines, optimizing data warehouses, and creating
                         systems that turn raw data into actionable insights. I
                         work with
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="currently">
-                    <div class="currently-label">currently:</div>
+                    <div class="currently-label">Currently:</div>
                     <div class="about-text">
                         Exploring federated query engines (think Trino but in
                         Python), Database Internals, and AI based workflows
@@ -74,7 +74,7 @@
                 </div>
 
                 <div class="about-text">
-                    you can find my ongoing and finished projects
+                    You can find my ongoing and finished projects
                     <span class="link-text" onclick="showSection('projects')"
                         >here</span
                     >.
@@ -150,7 +150,7 @@
             </section>
 
             <section id="projects" class="section">
-                <h2>projects.</h2>
+                <h2>Projects</h2>
                 <div class="project-item">
                     <h3>
                         Joinery: Lightweight, Federated Query Engine in Python
@@ -172,50 +172,14 @@
             </section>
 
             <section id="blog" class="section">
-                <h2>blog.</h2>
-                <p>
-                    <span class="tag"> Cooking up interesting stories... </span>
-                </p>
-                <!--<div class="blog-item">
-                    <h3>building production-ready etl pipelines</h3>
+                <h2>Blog</h2>
+                <div class="blog-item">
+                    <h3>What I learned From My First System Design Interview</h3>
                     <p class="blog-summary">
-                        comprehensive guide to designing reliable etl pipelines.
-                        covers idempotency, error handling, data validation, and
-                        monitoring. includes best practices for scheduling,
-                        dependency management, and handling late-arriving data.
+                        I layout what questions were asked during my system design interview for a data engineering 
+                        role at Tesla, what according to me went wrong, and what I'm doing to work on my system design skills
                     </p>
                 </div>
-
-                <div class="blog-item">
-                    <h3>dimensional modeling for analytics</h3>
-                    <p class="blog-summary">
-                        exploring star schema and snowflake schema design
-                        patterns. discusses slowly changing dimensions, fact
-                        table design, and optimization techniques. includes
-                        real-world examples and performance considerations.
-                    </p>
-                </div>
-
-                <div class="blog-item">
-                    <h3>data quality at scale</h3>
-                    <p class="blog-summary">
-                        deep dive into implementing automated data quality
-                        checks. examines validation strategies, anomaly
-                        detection, and building trust in data pipelines. covers
-                        tools like great expectations and custom validation
-                        frameworks.
-                    </p>
-                </div>
-
-                <div class="blog-item">
-                    <h3>modern data stack architecture</h3>
-                    <p class="blog-summary">
-                        overview of building data platforms with modern tools.
-                        explores ingestion with fivetran, transformation with
-                        dbt, warehousing with snowflake, and orchestration with
-                        airflow. discusses tradeoffs and integration patterns.
-                    </p>
-                </div>-->
             </section>
         </div>
     </body>
