Add project link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@
                 <h2>Projects</h2>
                 <div class="project-item">
                     <h3>
+                        <a href="https://github.com/Jayanth-Shanmugam/joinery"
+                            aria-label="joinery"
+                        >    
                         Joinery: Lightweight, Federated Query Engine in Python
+                        </a>
                     </h3>
                     <p class="project-description">
                         Joinery is a lightweight, federated query engine that
