Update project link class

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
                 <div class="social-links">
                     <a
+                        class = "link-text"
                         href="https://linkedin.com/in/jayanth-shanmugam"
                         aria-label="LinkedIn"
                     >
