--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <div class="social-links">
                     <a
-                        class = "link-text"
+                        class = "project-links"
                         href="https://linkedin.com/in/jayanth-shanmugam"
                         aria-label="LinkedIn"
                     >
