--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="project-item">
                     <h3>
                         <a href="https://github.com/Jayanth-Shanmugam/joinery"
-                            aria-label="joinery"
+                           class="project-link"
                         >    
                         Joinery: Lightweight, Federated Query Engine in Python
                         </a>
